crates/cistell-core/tests/ui/required_field_no_default.rs
use cistell_core::Config;

#[derive(Config)]
#[config(prefix = "APP", group = "redis")]
struct RequiredFieldNoDefault {
    host: String,
}

fn main() {}
